test/compile_errors/err_reserved_move.w
//! expect-check-fail: expected expression
fn main:
    move
